--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -213,4 +213,21 @@
   .header-title:hover {
     color: var(--primary);
   }
+
+  .typewriter {
+    overflow: hidden;
+    border-right: .15em solid var(--foreground);
+    width: 0;
+    white-space: nowrap;
+    animation: typing 2s steps(30 ,end) forwards, blink-caret .8s step-end infinite;
+  }
+
+  @keyframes typing {
+    from { width: 0 }
+    to { width: 100% }
+  }
+  @keyframes blink-caret {
+    from, to { border-color: transparent }
+    50% { border-color: var(--foreground) }
+  }
 }
